[metadata]
name = p-stable-lsh-python
version = 0.0.2
author = Charles7
author_email = liuhuiqi@mail.ustc.edu.cn
description = A 1&2-stable Locality-Sensitive Hashing implementation in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CharlesLiu7/p-stable-lsh-python
project_urls =
    Bug Tracker = https://github.com/CharlesLiu7/p-stable-lsh-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
